--- a/MyBusiness/MyBusiness/Web.config
+++ b/MyBusiness/MyBusiness/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <connectionStrings>
-    <add name="MyBusinessCnn" connectionString="Server=MYSQL5005.Smarterasp.net;Database=db_9ae46c_myblog;Uid=9ae46c_myblog;Pwd=;" providerName="MySql.Data.MySqlClient" />
+    <add name="MyBusinessCnn" connectionString="Server=MYSQL5005.Smarterasp.net;Database=db_9ae46c_myblog;Uid=9ae46c_myblog;Pwdss=;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
