--- a/MyBusiness/MyBusiness/MyBusiness.csproj
+++ b/MyBusiness/MyBusiness/MyBusiness.csproj
@@ -69,6 +69,7 @@
     <Compile Include="ConnectionStrings.cs" />
     <Compile Include="Controllers\AboutController.cs" />
     <Compile Include="Controllers\ApparelController.cs" />
+    <Compile Include="Controllers\HatsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MapController.cs" />
     <Compile Include="Controllers\NewArrivalsController.cs" />
@@ -104,8 +105,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ApparelsImages\4.jpg" />
-    <Content Include="ApparelsImages\5.jpg" />
     <Content Include="Content\themes\base\jquery-ui.css" />
     <Content Include="NewArrivalsImages\ImageMetaData.xml">
       <SubType>Designer</SubType>
@@ -190,7 +189,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Views\Hats\Index.cshtml" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
@@ -223,6 +224,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shirts\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="HatsImages\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
