--- a/MyBusiness/MyBusiness/MyBusiness.csproj
+++ b/MyBusiness/MyBusiness/MyBusiness.csproj
@@ -89,6 +89,8 @@
   <ItemGroup>
     <Content Include="ApparelsImages\1.jpg" />
     <Content Include="ApparelsImages\7-wo.jpg" />
+    <Content Include="Content\ie.css" />
+    <Content Include="Content\style.css" />
     <Content Include="Content\themes\base\jquery-ui.css" />
     <Content Include="Images\down.gif" />
     <Content Include="Images\leftedge.gif" />
@@ -100,8 +102,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="RhinestoneImages\ImageMetaData.xml" />
-    <Content Include="Scripts\droplinemenu.js" />
-    <Content Include="Content\droplinetabs.css" />
+    <Content Include="Scripts\jquery-1.3.1.min.js" />
     <Content Include="Scripts\jquery-ui.js" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
@@ -145,6 +146,8 @@
     <Content Include="Scripts\jquery-1.5.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
+    <Content Include="Scripts\jquery.dropdown.js" />
+    <Content Include="Scripts\jquery.dropdownPlain.js" />
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
