--- a/MyBusiness/MyBusiness/MyBusiness.csproj
+++ b/MyBusiness/MyBusiness/MyBusiness.csproj
@@ -87,8 +87,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ApparelsImages\1.jpg" />
-    <Content Include="ApparelsImages\7-wo.jpg" />
     <Content Include="Content\ie.css" />
     <Content Include="Content\style.css" />
     <Content Include="Content\themes\base\jquery-ui.css" />
@@ -102,6 +100,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="RhinestoneImages\ImageMetaData.xml" />
+    <Content Include="Scripts\GoogleAnalytics.js" />
     <Content Include="Scripts\jquery-1.3.1.min.js" />
     <Content Include="Scripts\jquery-ui.js" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
