--- a/MyBusiness/MyBusiness/MyBusiness.csproj
+++ b/MyBusiness/MyBusiness/MyBusiness.csproj
@@ -70,7 +70,14 @@
     <Compile Include="Controllers\AboutController.cs" />
     <Compile Include="Controllers\ApparelController.cs" />
     <Compile Include="Controllers\CapsController.cs" />
+    <Compile Include="Controllers\EmCapsController.cs" />
+    <Compile Include="Controllers\EmPursesController.cs" />
+    <Compile Include="Controllers\EmShirtsController.cs" />
+    <Compile Include="Controllers\GlitterShirtsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\KidsCapsController.cs" />
+    <Compile Include="Controllers\KidsPantsController.cs" />
+    <Compile Include="Controllers\KidsShirtsController.cs" />
     <Compile Include="Controllers\MapController.cs" />
     <Compile Include="Controllers\NewArrivalsController.cs" />
     <Compile Include="Controllers\PantsController.cs" />
@@ -93,10 +100,28 @@
     <Content Include="Content\ie.css" />
     <Content Include="Content\style.css" />
     <Content Include="Content\themes\base\jquery-ui.css" />
+    <Content Include="EmCapsImages\ImageMetaData.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="EmPursesImages\ImageMetaData.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="EmShirtsImages\ImageMetaData.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="GlitterImages\ImageMetaData.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Images\down.gif" />
     <Content Include="Images\leftedge.gif" />
     <Content Include="Images\rightedge.gif" />
-    <Content Include="NewArrivalsImages\ImageMetaData.xml">
+    <Content Include="KidsCapsImages\ImageMetaData.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="KidsPantsImages\ImageMetaData.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="KidsShirtsImages\ImageMetaData.xml">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="PantsImages\ImageMetaData.xml">
@@ -199,9 +224,6 @@
     <Content Include="Views\Shared\_FooterPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\NewArrivals\Index.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\Map\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -219,7 +241,9 @@
   <ItemGroup>
     <Content Include="Views\Shirts\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Views\Embroidery\Index.cshtml" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\_ApparelsMen.cshtml" />
   </ItemGroup>
@@ -231,12 +255,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\_CapsWomen.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Shared\_NewArrivalsWomen.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Shared\_NewArrivalsMen.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\_PantsWomen.cshtml" />
@@ -258,6 +276,66 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\_ShoesWomen.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_EmCapsMen.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\KidsCaps\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_KidsCapsGirls.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_KidsCapsBoys.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_KidsShirtsBoys.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_KidsShirtsGirls.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\KidsShirts\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_KidsPantsBoys.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_KidsPantsGirls.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\KidsPants\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_EmCapsWomen.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EmCaps\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_EmShirtsWomen.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_EmShirtsMen.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EmShirts\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_EmPurses.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EmPurses\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_GlitterShirtsWomen.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_GlitterShirtsMen.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\GlitterShirts\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
