--- a/MyBusiness/MyBusiness/MyBusiness.csproj
+++ b/MyBusiness/MyBusiness/MyBusiness.csproj
@@ -109,7 +109,7 @@
     <Content Include="EmShirtsImages\ImageMetaData.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="GlitterImages\ImageMetaData.xml">
+    <Content Include="GlitterShirtsImages\ImageMetaData.xml">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Images\down.gif" />
