--- a/MyBusiness/MyBusiness/MyBusiness.csproj
+++ b/MyBusiness/MyBusiness/MyBusiness.csproj
@@ -112,6 +112,11 @@
     <Content Include="GlitterShirtsImages\ImageMetaData.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="HomeScrollImages\12.jpg" />
+    <Content Include="HomeScrollImages\ImageMetaData.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="HomeScrollImages\images2.jpg" />
     <Content Include="Images\down.gif" />
     <Content Include="Images\leftedge.gif" />
     <Content Include="Images\rightedge.gif" />
@@ -336,6 +341,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\GlitterShirts\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_HomeImageScroll.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
