--- a/MyBusiness/MyBusiness/Web1.config
+++ b/MyBusiness/MyBusiness/Web1.config
@@ -15,9 +15,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="MyBusinessCnn" connectionString="Server=MYSQL5005.Smarterasp.net;Database=db_9ae46c_myblog;Uid=9ae46c_myblog;Pwd=kings2014;Persist Security Info=True;" providerName="MySql.Data.MySqlClient" />
-  <add name="db_9ae46c_myblogEntities" connectionString="metadata=res://*/Models.entDbMain.csdl|res://*/Models.entDbMain.ssdl|res://*/Models.entDbMain.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=MYSQL5005.Smarterasp.net;database=db_9ae46c_myblog;User Id=9ae46c_myblog;password=kings2014;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />
-  <add name="ftp" connectionString="Wutsup54321@" providerName="MySql.Data.MySqlClient" />
+    <add name="MyBusinessCnn" connectionString="Server=MYSQL5005.Smarterasp.net;Database=db_9ae46c_myblog;Uid=9ae46c_myblog;Pwd=;Persist Security Info=True;" providerName="MySql.Data.MySqlClient" />
+  <add name="db_9ae46c_myblogEntities" connectionString="metadata=res://*/Models.entDbMain.csdl|res://*/Models.entDbMain.ssdl|res://*/Models.entDbMain.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=MYSQL5005.Smarterasp.net;database=db_9ae46c_myblog;User Id=9ae46c_myblog;password=;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />
+  <add name="ftp" connectionString="@" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
